STIJ-393: Fix wrong padding on filter labels in filter/sidebar layout

--- a/components/41-organisms/filter/_filter.scss
+++ b/components/41-organisms/filter/_filter.scss
@@ -132,6 +132,10 @@
     > fieldset {
       padding: 0;
       border: 0;
+
+      > legend {
+        padding: 0;
+      }
     }
   }
 
